# arty-a7-fpga

./: .gitignore  Doxyfile  README.md  pyproject.toml
.github/agents/: ups-fan-controller.agent.md
.github/workflows/: ci.yml
arty_a7_fpga/: __init__.py
backend/: README.md  pyproject.toml
backend/backend/: __init__.py  backend.py
backend/backend/app/: __init__.py  logger.py
backend/tests/: __init__.py  conftest.py
docs/: conf.py  index.rst
docs/fpga/: overview.rst
docs/fpga/ip/: ip.rst
docs/fpga/rtl/: rtl.rst
docs/fpga/rtl/blink/: blink.rst
fpga/: arty-a7-fpga.xpr
fpga/constraints/: arty_a7.xdc
fpga/rtl/blink/: blink.v  tb_blink.v
fpga/tcl/: synth_impl.tcl
frontend/: README.md
pcb/: arty_a7_fpga.bak  arty_a7_fpga.kicad_pcb  arty_a7_fpga.kicad_prl  arty_a7_fpga.kicad_pro  arty_a7_fpga.kicad_sch  arty_a7_fpga.kicad_sym  arty_connector.kicad_sch  fan.kicad_sch  fp-lib-table  ~arty_a7_fpga.kicad_sch.lck
pcb/arty_a7_fpga.pretty/: PmodHeader_2x06_P2.54mm_Horizontal.kicad_mod
tests/: conftest.py  test_arty_a7_fpga.py
