[tool.uv.workspace]
members = [
    "backend",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.9.10",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-verilog-domain>=0.2.post21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arty_a7_fpga"]   
