
[project]
name = "arty-a7-fpga"
version = "0.1.0"
description = "Digilent Arty A7 FPGA playground"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Fabien Meyer", email = "fabien.meyer@outlook.com"},
]
keywords = ["Digilent", "Arty", "A7", "FPGA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "breathe>=4.36.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.9.10",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-verilog-domain>=0.2.post21",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=elims_raspberry --cov-report=term-missing"
asyncio_mode = "auto"


[tool.ruff]
line-length = 180
target-version = "py313"
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Allow trailing commas in multi-line constructs
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "ISC001", # Allow use of 'isinstance' with a tuple of types
    "S101",   # Use of assert detected. Need to allow assert statements in tests
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "ANN401",  # Allow typing.Any in tests for mocks
    "PT019",   # Allow pytest fixtures as function arguments (needed for @patch decorator)
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arty_a7_fpga"]   



