[project]
name = "arty-a7-fpga-backend"
version = "0.0.1"
description = "Arty A7 FPGA Backend"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Fabien Meyer", email = "fabien.meyer@outlook.com"},
]
keywords = ["Digilent", "Arty", "A7", "FPGA", "Backend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=arty_a7_fpga --cov-report=term-missing"

[tool.ruff]
line-length = 180
target-version = "py313"
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Allow trailing commas in multi-line constructs
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "ISC001", # Allow use of 'isinstance' with a tuple of types
    "S101",   # Use of assert detected. Need to allow assert statements in tests
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "ANN401",  # Allow typing.Any in tests for mocks
    "PT019",   # Allow pytest fixtures as function arguments (needed for @patch decorator)
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]   



